Working OAuth server with swagger interface
